# tim-shared/pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tim-shared"
version = "0.1.0"
description = "Shared utilities for TIM services"
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.5.0",
    "aiomysql==0.2.0",
    "redis[hiredis]==5.0.1",
    "structlog==23.2.0",
    "python-dateutil==2.8.2",
    "aiohttp==3.9.1",
    "boto3==1.34.0",
    "motor==3.3.2",
    "pymongo==4.6.0",
]

[tool.setuptools]
package-dir={""="src"}

[tool.setuptools.packages.find]
whrer=["src"]